--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -8,16 +8,18 @@
 
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 .Connect {
-  font-size: 20px;
+  font-size: 25px;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
-  flex-grow: 4;
+  flex-grow: 2;
+  padding-left: 10vw;
 }
 .Iconsgroup {
   display: flex;
 
-  flex-grow: 10;
+  flex-grow: 8;
   flex-direction: row;
 }
