--- a/src/components/SideArea.css
+++ b/src/components/SideArea.css
@@ -1,29 +1,29 @@
-sidebar {
-  background-color: '#202020';
-  min-width: '25vw';
-  min-height: '73.1vh';
-  color: 'white';
-  font-size: '20px';
-  padding-top: '5rem';
-  padding-left: '3rem';
+.Sidebar {
+  background-color: #202020;
+  min-width: 25vw;
+  min-height: 73.1vh;
+  color: white;
+  font-size: 20px;
+  padding-top: 5rem;
+  padding-left: 3rem;
+  /*color: 'rgba(255,255,255,.5)'*/
 }
-head {
-  font-family: 'Montserrat; sans-serif';
-  font-size: '55px';
-  font-weight: 'bold';
+.Head {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 55px;
+  font-weight: bold;
 }
-subhead {
-  font-family: 'Arial';
-  font-size: '25px';
-  font-weight: 'lighter';
-
-  opacity: '0.7';
-  margin-bottom: '1rem';
+.Subhead {
+  font-family: Arial;
+  font-size: 25px;
+  font-weight: lighter;
+  opacity: 0.7;
+  margin-bottom: 1rem;
+  /*color: '#515151'*/
 }
-hoverButtons {
-  line-height: '1.75rem';
+.Hoverbuttons {
+  line-height: 1.75rem;
 }
-hoverButtons:hover {
-  opacity: '1';
-  color: 'red';
+.Hoverbuttons:hover {
+  padding-top: 5px;
 }
